# AG-Breaker

./: README.md  pyproject.toml  requirements.txt
agbreaker/: __main__.py  cli.py
docs/: devlog.md  manuale-utente.md  proposta.md  scelte.md  uso-ia.md
src/agbreaker/: __init__.py  __main__.py  cli.py
src/agbreaker/attacks/: __init__.py  bruteforce.py  dictionary.py
src/agbreaker/core/: __init__.py  cracker.py  pdf_cracker.py  zip_cracker.py
src/agbreaker/utils/: __init__.py  checkpoint.py  detector.py  report.py
tests/: test_bruteforce_attack.py  test_cracker_base.py  test_detector.py  test_dictionary_attack.py  test_polymorphism.py
