[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agbreaker"
version = "0.1.0"
description = "Tool didattico per il recupero di password su file ZIP e PDF protetti (attacco a dizionario o brute force)."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
